# retro

./: .gitignore  ARCHITECTURE.md  DAATAN_CORE.md  GLOSSARY.md  INVESTOR_COSTS.md  MVP_PLAN_6M.md  PRODUCT.md  TECH.md  TODO.md  duel.html  factum_atlas.html  oracle-test.html  readme.md
.claude/commands/: progress.md
.github/workflows/: deploy-atlas.yml  deploy-oracle.yml
TruthMachine/: COMPETITORS.md  DESIGN_PLAN.md  EVENTS.md  PITCH_DECK.md  SOURCES.md  STATUS.md  sources.json
TruthMachine/prompts/: 01_gatekeeper.md  02_forensic_extraction.md  02b_article_aggregator.md  03_consensus_meter.md  03_ground_truth.md  04_event_matching.md  05_contrarianism.md  06_page_generation.md  README.md  registry.json
api/: .env.example  pyproject.toml
api/src/forecast_api/: auth.py  cache.py  config.py  forecaster.py  leaderboard.py  main.py  models.py  searcher.py
api/tests/: test_cache.py  test_fetch_article.py  test_forecaster_helpers.py
bayesoracle/: DESIGN.md  calibrate_edges.py  compute_edge_probs.py  edge_weights.json  fetch_node_history.py  graph.html
bayesoracle/node_history/: ANNEX_GAZA.json  ANNEX_WB.json  BENNETT_PM.json  BIBI_OUT.json  BIBI_PM.json  CEASEFIRE_X.json  EIZENKOT_PM.json  ELECTIONS.json  IRAN_DEAL.json  IRAN_NUKE.json  IRAN_REGIME.json  LAPID_PM.json  LEBANON_NORM.json  LIEBERMAN_PM.json  PAHLAVI.json  SAUDI_ACCORDS.json  SAUDI_NORM.json  STRIKE_5.json  SYRIA_NORM.json  TRUMP_IL.json  TURKEY_CLASH.json  US_GAZA.json  (+2 more)
case-studies/: index.html
data/: README.md  leaderboard.json  progress.json
docs/: ATLAS_SNAPSHOTS.md  INVESTMENT_PLAN.md  ORACLE_API.md  ORACLE_DEPLOY.md
infra/: check_keys.sh  deploy.sh  deploy_oracle.sh  ec2_bootstrap.sh  ec2_run.sh  ec2_run_poc.sh  logs.sh  monitor.sh  oracle-api.service  remote_stats.sh  restore_atlas.sh  run_pipeline.sh  snapshot_atlas.sh  truthmachine-poc.service  truthmachine.service
pipeline/: .env.example  BACKTEST.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  smoke_test.py  test_run.py
pipeline/scripts/: audit_event_criteria.py  improve_keywords.py
pipeline/src/tm/: aggregator.py  backtest.py  config.py  create_real_samples.py  create_sample_data.py  duel_report.py  extractor.py  gatekeeper.py  gdelt_ingest.py  generate_pages.py  gnews_ingest.py  ingest_all.py  ingestor.py  init_db.py  migrate_cell_signals.py  models.py  orchestrator.py  poc_event_gen.py  poc_report.py  polymarket.py  polymarket_harvest.py  progress.py  reaggregate.py  render_atlas.py  runner.py  scorer.py  site_search.py  sync_atlas.py  utils.py  web_search.py  web_search_ingest.py
pipeline/src/tm/templates/: atlas.html
pipeline/tests/: sample_article_a10.json  test_models.py
truthmachine-page-generator/: SKILL.md
ui-prototype/: data.ts  page.tsx
(+274 files in other folders)
