[project]
name = "truthmachine-pipeline"
version = "0.1.0"
description = "TruthMachine — retroactive media prediction analysis pipeline"
requires-python = ">=3.11"
dependencies = [
    "instructor>=1.7.0",
    "litellm>=1.50.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "lightgbm>=4.0.0",
    "numpy>=1.26.0",
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
